14-gateway-api/AGC/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: akkc-app1
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
