14-gateway-api/AGC/app1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: akkc-http-route
  namespace: akkc-app1
spec:
  parentRefs:
    - name: akkc-app-gateway
      namespace: akkc-gateway
  rules:

    - matches:
        - path:
            type: PathPrefix
            value: /app1
      backendRefs:
        - name: app1-service
          port: 80
